--- a/matLab/locale/en/LC_MESSAGES/django.po
+++ b/matLab/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-14 11:53+0000\n"
+"POT-Creation-Date: 2018-05-23 09:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,13 +54,103 @@ msgstr "Operating System"
 msgid "Renouvellement Licence"
 msgstr "Licence renewal"
 
-#: matLab/templates/matLab/formulaire.html:8
+#: matLab/templates/matLab/formulaire.html:9
+msgid "Comment trouver mon HostID ?"
+msgstr "How do I find my computer’s HostID ?"
+
+#: matLab/templates/matLab/formulaire.html:11
 #: matLab/templates/matLab/index.html:7
 msgid "Envoyer"
 msgstr "Send"
 
-#: matLab/templates/matLab/licence_details.html:5
-#, fuzzy
-#| msgid "Detail renouvellement licence"
-msgid "Détail renouvellement licence"
-msgstr "Details Licence renewal"
+#: matLab/templates/matLab/formulaire.html:16
+msgid ""
+"Pour les réseaux simultanés ou les réseaux nommés Licence d'utilisateurs, "
+"l'adresse MAC doit être utilisé comme hostID. Par ailleurs, les ordinateurs "
+"possédant un disque B: doit utilisé l'adresse MAC comme hostID."
+msgstr "For Network Concurrent or Network Named User licenses, the MAC address must be used as the Host ID. Additionally, computers with a B: drive must use the MAC address as the host ID."
+
+#: matLab/templates/matLab/formulaire.html:17
+msgid ""
+"Pour obtenir l'adresse MAC, ouvrez un Invité de Commande et lancez la "
+"commande suivante: "
+msgstr "To obtain the MAC address, open a Windows command prompt and run the following command:"
+
+#: matLab/templates/matLab/formulaire.html:22
+msgid ""
+"Avec la version R2014a et supérieure, n'importe quelle adresse MAC peut "
+"servir comme HostID malgré le nom de l'interface. Si les interfaces sont "
+"énumérées, utiliser la plus petite interface."
+msgstr "With R2014a and later, any MAC address can serve as the host ID regardless of interface name. If the interfaces are enumerated, use the lowest-enumerated interface."
+
+#: matLab/templates/matLab/formulaire.html:23
+#: matLab/templates/matLab/formulaire.html:27
+msgid ""
+"Pour obtenir l'adresse MAC grâce à la console shell, lancez la commande "
+"suivante :"
+msgstr "To obtain the MAC address using a bash shell, run the following command:"
+
+#: matLab/templates/matLab/formulaire.html:24
+msgid "<nomInterface>"
+msgstr "<InterfaceName>"
+
+#: matLab/templates/matLab/formulaire.html:25
+msgid ""
+"Où <nomInterface> est le nom de l'interface réseau. Par exemple, en0, eth0, "
+"wlan0 ou enp5s0 sont des noms d'interface communs sur Linux, bien que cela "
+"peut varier d'un ordinateur à un autre."
+msgstr "Where <interfaceName> is the name of the network interface. For example, en0, eth0, wlan0, or enp5s0 are common Linux network interface names, although this will vary from computer to computer."
+
+#: matLab/templates/matLab/formulaire.html:26
+msgid ""
+"Pour la version R2013b et inférieure, l'hostID est l'adresse MAC du "
+"l'interface eth0 ou en0."
+msgstr "For R2013b and earlier, the Host ID is the MAC address of the eth0 or en0 interface."
+
+#: matLab/templates/matLab/formulaire.html:28
+msgid "sbin/ifconfig eth0 ou /sbin/ifconfig eth1 "
+msgstr "sbin/ifconfig eth0 or /sbin/ifconfig eth1 "
+
+#: matLab/templates/matLab/formulaire.html:29
+msgid ""
+"L'adresse MAC est généralement précédée de la valeur 'HWaddr'. Si la "
+"distribution Linux n'a pas d'interface réseau qui suit le schéma (enX or "
+"ethX), il sera nécessaire de mettre à jour à la version R2014a ou supérieur, "
+"ou changez le nom des interfaces afin que MatLab le détecte. Consulter la "
+"documentation de la distribution Linux que vous possédez pour connaître les "
+"instructions afin de changer le nom de votre interface."
+msgstr "The MAC Address is usually the value listed next to 'HWaddr'. If your Linux distribution does not have network interfaces which follow the enX or ethX naming scheme, you will either need to update to MATLAB R2014a or later, or change the name of your interfaces so MATLAB can detect them. Consult your distribution's documentation for instructions on changing the network interface naming scheme."
+
+#: matLab/templates/matLab/formulaire.html:33
+msgid "Pour MacOS, le hostID est l'adresse MAC du périphérique en0."
+msgstr "For MacOS, the Host ID is the MAC address of the en0 device."
+
+#: matLab/templates/matLab/formulaire.html:34
+msgid ""
+"Pour obtenir l'adresse MAC du périphérique en0, commencez par ouvrir un "
+"terminal :"
+msgstr "To obtain the MAC address of the en0 device, start by opening a terminal:"
+
+#: matLab/templates/matLab/formulaire.html:35
+msgid "Ouvrir Finder"
+msgstr "Open Finder"
+
+#: matLab/templates/matLab/formulaire.html:36
+msgid "Ouvrir le dossier Application"
+msgstr "Open the Applications folder"
+
+#: matLab/templates/matLab/formulaire.html:37
+msgid "Ouvrir le dossier Utilitaire"
+msgstr "Open the Utilities folder"
+
+#: matLab/templates/matLab/formulaire.html:38
+msgid "Lancer Terminal"
+msgstr "Start the Terminal application"
+
+#: matLab/templates/matLab/formulaire.html:39
+msgid "Dans le terminal, rentrez la commande suivante:"
+msgstr "In the Terminal window, enter the following command:"
+
+#: matLab/templates/matLab/formulaire.html:41
+msgid "L'adresse MAC est précédée par la valeur 'ether'."
+msgstr "The MAC address is the value listed next to 'ether'."
